The code was restructured

--- a/index.html
+++ b/index.html
@@ -4,142 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400;700&display=swap" rel="stylesheet">
-    <title>Parcial_2</title>
+    <title>Mi Tutorial</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
-
 <body>
-    <header class="site-header">
-        <div class="container">
-            <div class="row">
-
-                <div class="col-lg-12 col-12 d-flex flex-wrap">
-                    <p class="d-flex me-4 mb-0">
-                        <i class="bi-person custom-icon me-2"></i>
-                        <strong class="text-dark">&#10057; Welcome to Music Festival 2023</strong>
-                    </p>
-                </div>
-
-            </div>
-        </div>
-    </header>
-
-
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" id="festava" href="index.html">
-                Festava Live
-            </a>
-
-            <a href="ticket.html" class="btn custom-btn d-lg-none ms-auto me-4">Buy Ticket</a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
-                    <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#">Home</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#">About</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#">Artists</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#">Schedule</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#">Pricing</a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a class="nav-link click-scroll" href="#">Contact</a>
-                    </li>
-                </ul>
-
-                <a href="#" class="custom-btn">Buy Ticket</a>
-            </div>
-        </div>
-    </nav>
-
-
-    <section class="hero-section" id="section_1">
-        <div class="section-overlay"></div>
-
-        <div class="container d-flex justify-content-center align-items-center">
-            <div class="row">
-
-                <div class="col-12 mt-auto mb-5 text-center">
-                    <small>Festava Live Presents</small>
-
-                    <h1 class="text-white mb-5">Night Live 2023</h1>
-
-                    <a class="btn custom-btn smoothscroll" id="btn2" href="#section_2">Let's begin</a>
-                </div>
-
-                <div class="col-lg-12 col-12 mt-auto d-flex flex-column flex-lg-row text-center">
-                    <div class="date-wrap">
-                        <h5 class="text-white">
-                            &#128197
-                            01 - 03<sup>th</sup>, Dec 2023
-                        </h5>
-                    </div>
-
-                    <div class="location-wrap mx-auto py-3 py-lg-0">
-                        <h5 class="text-white">
-                            <i class="custom-icon bi-geo-alt me-2"></i>
-                            Manizales, Colombia
-                        </h5>
-                    </div>
-
-                    <div class="social-share">
-                        <ul class="social-icon d-flex align-items-center justify-content-center">
-                            <span class="text-white me-3">Share: &#10150</span>
-
-                            <li class="social-icon-item">
-                                <a href="#" class="social-icon-link">
-                                    <span class="bi-facebook"></span>
-                                </a>
-                            </li>
-
-                            <li class="social-icon-item">
-                                <a href="#" class="social-icon-link">
-                                    <span class="bi-twitter"></span>
-                                </a>
-                            </li>
-
-                            <li class="social-icon-item">
-                                <a href="#" class="social-icon-link">
-                                    <span class="bi-instagram"></span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="video-wrap">
-            <video autoplay="" loop="" muted="" class="custom-video" poster="">
-                <source src="video/video_website.mp4" type="video/mp4">
-            </video>
-        </div>
-    </section>
-
-
+    <div class="container">
+        <h1>Mi Tutorial</h1>
+        <p>Aquí va tu contenido tutorial.</p>
+    </div>
 </body>
 
 </html>
