--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
     <title>Mi Tutorial</title>
     <style>
         body {
@@ -22,8 +25,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Mi Tutorial</h1>
-        <p>Aquí va tu contenido tutorial.</p>
+        <h1>El tutorial de buena fe</h1>
+        <p>Escriba aqui l oque quiera</p>
+        <button type="button" class="btn btn-primary">Estripame</button>
     </div>
 </body>
 
