--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
         </div>
     </div>
 
+
+    <div>
+
+        <h1>Aqui listas</h1>
+
+        <ul class="list-group">
+            <li class="list-group-item active">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Morbi leo risus</li>
+            <li class="list-group-item">Porta ac consectetur ac</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+        </ul>
+    </div>
+
     <div>
         <h1>Estos son alerts</h1>
         <div class="alert alert-primary" role="alert">
